--- a/nb1.ipynb
+++ b/nb1.ipynb
@@ -52,7 +52,9 @@
     "        if max(car.time_slots_at_charging_unit) > self.num_time_slots - 1:\n",
     "            raise ValueError(\"From car required time slots not compatible \"\n",
     "            \" with charging unit.\")\n",
-    "        self.cars_to_charge.append(car)"
+    "        self.cars_to_charge.append(car)\n",
+    "\n",
+    "    def"
    ]
   },
   {
