--- a/nb1.ipynb
+++ b/nb1.ipynb
@@ -371,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Solving the QUIC problem with a classicar optimizer from Scikit."
+    "Solving the QCIO problem with a classicar optimizer from Scikit."
    ]
   },
   {
@@ -1587,6 +1587,15 @@
     "charging_unit, qcio_minimization_result.x, marker_size=20)\n",
     "fig.update_layout(width=400, height=300)\n",
     "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the following we will turn the QCIO problem into a quadratic unconstrained integer optimzation problem (QUIO). And after that into a QUBO which is for binary optimization and a QAOA can solve.\n",
+    "Turning the problem into an unconstrained one is just to incorporate the constraint term into the cost function on which we have to optimize. E.g.\n",
+    "$f_1=f_1(p)$ cost plus $C=C(p)$ constraint into $f_2(p,\\rho) = f_1(p)+\\rho ||(C-C(p))||^2$. And here we're still looking for a $p$ that minimizes $f_2$ with a well chosen parameter $\\rho$. When $\\rho$ is large enough the solution of the QUIO is also the approx solution of the QCIO as the optimization will try to reduce the contribution of the seconf term in $f_2$."
    ]
   },
   {
