qubo to Ising 1

--- a/nb2.ipynb
+++ b/nb2.ipynb
@@ -1044,10 +1044,129 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "### Revisiting QUBO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The general form of QUBO has the form:\n",
+    "\n",
+    "$\\min\\limits_{\\mathbf{b} \\in \\{0, 1\\}^n} f_3(\\mathbf{b})$\n",
+    "\n",
+    "$f_3( \\mathbf{b}) = \\mathbf{b}^T A \\mathbf{b}+ L \\mathbf{b} + c$\n",
+    "\n",
+    "$A \\in \\mathbb{R}^{n \\times n}; \\quad L \\in \\mathbb{R}^{n \\times 1}; \\quad c \\in \\mathbb{R}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(The precise form of $f_3$ is derived in nb1 where it is shown how to obtain the it from a QCIO.)\n",
+    "Let us transform it into an Ising Hamiltonian. Writing the equation in coordinate representation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "$$f_3(\\mathbf{b}) = \\sum\\limits_{i=0}^{n-1} \\sum\\limits_{j>i}^{n-1} a_{ij} b_i b_j + \\sum\\limits_{i=0}^{n-1} l_i b_i + c$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following operation is applied:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$b_i \\leftrightarrow \\frac{1}{2} \\left( I^{\\bigotimes n} - \\sigma_Z^{(i)} \\right)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Where"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$I = \\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$,\n",
+    "\n",
+    "$\\sigma_Z = I\\otimes ... \\otimes I \\otimes Z_{[\\text{at ith pos}]} \\otimes I \\otimes...\\otimes I$,\n",
+    "\n",
+    "$Z = \\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix}$.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This substitution can be understood by using an Ising lattice that has instead of $\\{-1, 1\\}$ the values $\\{0, 1\\}$ on its sites. This is demonstrated below. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eigenvalues of Z: [ 1. -1.]\n",
+      "eigenvectors of Z: [1. 0.] [0. 1.]\n",
+      "\n",
+      "eigenvalues of σ_z: [0. 1.]\n",
+      "eigenvectors of σ_z: [1. 0.] [0. 1.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "Z = np.array([[1, 0], [0, -1]])\n",
+    "\n",
+    "print(\"eigenvalues of Z:\", np.linalg.eig(Z)[0])\n",
+    "print(\"eigenvectors of Z:\", np.linalg.eig(Z)[1][0], np.linalg.eig(Z)[1][1])\n",
+    "print(\"\")\n",
+    "\n",
+    "Sigma_Z =1/2 * (np.array([[1, 0], [0, 1]]) - np.array([[1, 0], [0, -1]]))\n",
+    "print(\"eigenvalues of \\u03c3_z:\", np.linalg.eig(Sigma_Z)[0])\n",
+    "print(\"eigenvectors of \\u03c3_z:\", np.linalg.eig(Sigma_Z)[1][0], np.linalg.eig(Sigma_Z)[1][1])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thus the (problem's) Hamiltonian reads:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$H_p = \\sum\\limits_{i=0}^{n-1} \\sum\\limits_{j>i}^{n-1} h_{ij} \\sigma_Z^{(i)} \\sigma_Z^{(j)} + \\sum\\limits_{i=0}^{n-1} h'_i \\sigma_Z^{(i)} + h''I^{\\otimes n} $$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
